--- a/app/assets/stylesheets/components/_testimonial.scss
+++ b/app/assets/stylesheets/components/_testimonial.scss
@@ -14,6 +14,7 @@ section.row {
     }
 
     display: block;
+    padding: 30px 0 0;
   }
 
   .testimonial-content {
